# chai

./: .gitignore  README.md  chai.py  pyproject.toml
chai/: cli.py  gemini.py  persistence.py
chai/base/: chat.py  provider.py
chai/commands/: chat.py  list.py
chai/providers/: anthropic.py  google.py  mistral.py  openai.py  providers.py  xai.py
src/chai/: cli.py  gemini.py
src/chai/commands/: chat.py  list.py
