[project]
name = "chai"
version = "2.0.0"
description = "Chat with Google DeepMind Gemini models in the terminal"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Darik Harter", email = "darik.harter@gmail.com"}
]
maintainers = [
    {name = "Darik Harter", email = "darik.harter@gmail.com"}
]
keywords = [
    "ai",
    "chai",
    "chat",
    "cli",
    "gemini",
    "genai",
    "google",
    "llm",
    "terminal",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.13.2"
dependencies = [
    "google-genai>=1.13.0",
    "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/itsdarik/chai"
Repository = "https://github.com/itsdarik/chai"
Issues = "https://github.com/itsdarik/chai/issues"
Changelog = "https://github.com/itsdarik/chai/releases"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "poethepoet>=0.34.0",
    "ruff>=0.11.8",
]

[project.scripts]
chai = "chai.cli:main"

[tool.poe.tasks]
all = { sequence = ["format", "check", "typecheck"], help = "Run all tasks" }
format = { cmd = "ruff format", help = "Format the code" }
check = { cmd = "ruff check", help = "Check the code" }
typecheck = { cmd = "mypy .", help = "Typecheck the code" }

[tool.ruff]
lint.select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "PTH",
    "SIM",
    "UP",
    "W",
]
